# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
device/: models.py  permissions.py  serializer.py  urls.py  views.py
devices_hub_api/: asgi.py  settings.py  urls.py  wsgi.py
